<?xml version="1.0"?>
<package format="2">
  <name>body_tracker_msgs</name>
  <version>0.0.1</version>
  <description>message for skeleton tracking</description>
  <maintainer email="mihael.simonic@ijs.si">Mihael SimoniÄ</maintainer>
  <license>Apache-2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
